--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,8 @@
     @apply font-inter min-w-80;
   }
 }
+
+.dialog-backdrop::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);
+}
